# dtu_mlops_group_80

./: .pre-commit-config.yaml  README.md  profile.txt  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py
.github/workflows/: codecheck.yaml  pre_commit.yaml  tests.yaml
configs/: config.yaml
data/processed/: test_features.pt  test_targets.pt  train_features.pt  train_targets.pt
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
log/energy/: Hoffnung_16640.1736859002347540000.pt.trace.json  Hoffnung_25656.1736858826689721600.pt.trace.json
outputs/.hydra/: hydra.yaml
outputs/2025-01-13/20-00-16/.hydra/: config.yaml  hydra.yaml
outputs/2025-01-13/20-04-56/.hydra/: hydra.yaml
outputs/2025-01-13/20-06-11/.hydra/: config.yaml  (+1 more)
outputs/2025-01-13/20-25-42/: trained_model.pt
outputs/2025-01-14/12-37-27/: trained_model.pt
outputs/2025-01-14/13-03-38/: trained_model.pt
outputs/2025-01-14/13-04-35/: trained_model.pt
outputs/2025-01-14/13-36-07/: trained_model.pt
outputs/2025-01-14/13-39-41/: trained_model.pt
outputs/2025-01-14/13-40-20/: trace.json  trained_model.pt
outputs/2025-01-14/13-47-06/: trained_model.pt
outputs/2025-01-14/13-50-02/: trained_model.pt
src/energy/: data.py  model.py  train.py
src/lightning/: data.py  train.py
src/renewable_energy_price_prediction/: data.py  evaluate.py  main.py  model.py  train.py  utils.py
tests/: test_data.py  test_model.py
tests/performancetests/: not_done_test_model.py  not_done_test_train_invocation.py  old_test_model.py
wandb/: latest-run
(+39 files in other folders)
