[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "renewable_energy_price_prediction"
version = "0.0.1"
description = "A mlops project pipeline for predicting electricity prices of renewable energy"
authors = [
  { name = "group 80", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]

[project.scripts]
preprocess_data = "lightning.data:main"
train = "lightning.train:main"
evaluate = "renewable_energy_price_prediction.evaluate:app"
visualize = "renewable_energy_price_prediction.visualize:app"
